[gd_scene load_steps=11 format=3 uid="uid://cquje3a3uk87r"]

[ext_resource type="Texture2D" uid="uid://dvahcyoh6hkgh" path="res://assets/Tilemap/BOX 1.png" id="1_8rsad"]
[ext_resource type="Script" path="res://scripts/tiles/box_tile.gd" id="1_syr1s"]
[ext_resource type="Texture2D" uid="uid://cgg13mqlwvylv" path="res://assets/Tilemap/BOX 2.png" id="2_dnvsv"]
[ext_resource type="Texture2D" uid="uid://c2nfxgs43us" path="res://assets/Tilemap/BOX 3.png" id="3_l77ik"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dnkfn"]
atlas = ExtResource("1_8rsad")
region = Rect2(0, 0, 28, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_a8301"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnkfn")
}],
"loop": true,
"name": &"01",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"02",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_sgw0d"]
atlas = ExtResource("2_dnvsv")
region = Rect2(0, 0, 28, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwg5e"]
atlas = ExtResource("3_l77ik")
region = Rect2(0, 0, 28, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_aauto"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgw0d")
}],
"loop": true,
"name": &"01",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwg5e")
}],
"loop": true,
"name": &"02",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qpxr6"]
size = Vector2(28, 32)

[node name="box_tile" type="StaticBody2D"]
script = ExtResource("1_syr1s")

[node name="sprite_idle" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_a8301")
animation = &"01"

[node name="sprite_damage" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_aauto")
animation = &"01"

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qpxr6")

[node name="damage_numbers_origin" type="Node2D" parent="."]
position = Vector2(0, -19)
